# ml-deepglobe

./: .gitignore  GUIDE.md  README.md  main.py  pyproject.toml  requirements-mac.txt  requirements.txt
data/splits/: train_files.json  val_files.json
notebooks/: 01_data_exploration.ipynb  02_processing_pipeline.ipynb  02_test_dataloader.ipynb  03_test_model_setup.ipynb  04_evaluate_results.ipynb
src/: inference.py  train.py
src/data/: create_splits.py  dataset.py  mask_conversion.py  tiling.py
src/models/: segmentation_model.py
src/training/: losses.py  metrics.py  trainer.py
src/utils/: visualization.py
